--- a/index.ipynb
+++ b/index.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,18 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "number_50 = 50\n",
     "my_number = None\n",
     "if number_50 > 100:\n",
-    "    my_number = 100\n",
+    "    my_number =100 \n",
     "elif number_50 > 50:\n",
     "    my_number = 50\n",
     "else:\n",
-    "   my_number = 0 "
+    "   my_number = 0 \n",
+    "print(my_number)"
    ]
   },
   {
@@ -66,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is so hot out!\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
@@ -76,7 +93,8 @@
     "if temperature > 80:\n",
     "    is_it_hot = \"It is so hot out!\"\n",
     "else:\n",
-    "    is_it_hot = \"This is nothing! Bring on the heat.\""
+    "    is_it_hot = \"This is nothing! Bring on the heat.\"\n",
+    "print(is_it_hot)"
    ]
   },
   {
@@ -89,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wednesday\n"
+     ]
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
@@ -108,8 +134,9 @@
     "    day_of_the_week = 'Thursday'\n",
     "elif today_is == 6:\n",
     "    day_of_the_week = 'Friday'\n",
-    "else:\n",
-    "    day_of_the_week = 'Saturday'\n"
+    "elif today_is == 7:\n",
+    "    day_of_the_week = 'Saturday'\n",
+    "print(day_of_the_week)"
    ]
   },
   {
@@ -121,19 +148,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "# conditionals go here\n",
     "if string == \"Python\":\n",
-    "    sub_string = \"on\"\n",
+    "    sub_string == \"on\"\n",
     "    ends_with = True\n",
     "else:\n",
-    "    ends_with = False"
+    "    ends_with = False\n",
+    "print(ends_with)"
    ]
   },
   {
@@ -145,6 +181,13 @@
     "\n",
     "Great! In this lab we saw how to use our knowledge of conditionals to selectively assign values based on a condition. We will start integrating conditionals in many more ways in our code and we will start to see how useful they can become in more complex problems."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
